objects/iPadAppMaker__c.object
<CustomObject>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/apex/iPadAppAdmin?id=&quot;&amp;Id, &quot;Edit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app_icon__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olW1&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>app_icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>content_1__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olW2&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>content_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>content_2__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olW3&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>content_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>content_3__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olW4&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>content_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>content_bg_color__c</fullName>
        <defaultValue>&apos;FFFFFF&apos;</defaultValue>
        <label>content_bg_color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hd_bg_color_end__c</fullName>
        <defaultValue>&apos;878787&apos;</defaultValue>
        <label>hd_bg_color_end</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hd_bg_color_start__c</fullName>
        <defaultValue>&apos;CFCFCF&apos;</defaultValue>
        <label>hd_bg_color_start</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hd_text_color__c</fullName>
        <defaultValue>&apos;000000&apos;</defaultValue>
        <label>hd_text_color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>logo_url__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olW7&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>logo_url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sidebar_bg_color__c</fullName>
        <defaultValue>&apos;d9d9d3&apos;</defaultValue>
        <label>sidebar_bg_color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sidebar_button_1__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olW8&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>sidebar_button_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sidebar_button_2__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olW9&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>sidebar_button_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sidebar_button_3__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olWA&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>sidebar_button_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sidebar_position__c</fullName>
        <label>sidebar_position</label>
        <picklist>
            <picklistValues>
                <fullName>right</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bottom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sub_content_1__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olWD&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>sub_content_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_content_2__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olWE&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>sub_content_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_content_3__c</fullName>
        <defaultValue>&apos;https://c.na1.content.force.com/servlet/servlet.ImageServer?id=01515000004olWF&amp;oid=00D7A0000008pI0&apos;</defaultValue>
        <label>sub_content_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>youtube_enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>youtube_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>youtube_height__c</fullName>
        <defaultValue>345</defaultValue>
        <label>youtube_height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>youtube_left__c</fullName>
        <defaultValue>337</defaultValue>
        <label>youtube_left</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>youtube_tab_number__c</fullName>
        <label>youtube_tab_number</label>
        <picklist>
            <picklistValues>
                <fullName>Tab #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tab #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tab #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tab #4</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tab #5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>youtube_top__c</fullName>
        <defaultValue>63</defaultValue>
        <label>youtube_top</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>youtube_url__c</fullName>
        <defaultValue>&apos;http://youtu.be/tdqoQ0zL7GQ&apos;</defaultValue>
        <label>youtube_url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>youtube_width__c</fullName>
        <defaultValue>560</defaultValue>
        <label>youtube_width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>iPad App Maker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>iPad App Maker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iPad Apps Maker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>